[package]
name = "permutation_of_a_string"
version = "0.1.0"
authors = ["Abhik Jain <abhikjain360@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
io_tokenized = { version = "0.1.0", path = "../io_tokenized" }
